...
    var password: String = ""
    var name: String = ""
    var error: Error?
    var showError: Bool = false
    
    var buttonTitle: String {
        status == .signIn ? "Sign in" : "Sign up"
    }
}

enum LoginViewAction {
    case toggleStatus
    case login
...
